<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/introTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold" />
    <ImageView
        android:layout_margin="@dimen/global_margin"
        android:id="@+id/introImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/introTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_contentDescription"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:id="@+id/letsGetStartedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/introImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp" />

    <TextView

        android:id="@+id/decriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/letsGetStartedTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lineSpacingExtra="5dp"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp" />
    <Button
        android:id="@+id/SignInBTN"
        app:layout_constraintTop_toBottomOf="@id/decriptionTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        />
    <Button
        android:id="@+id/signupBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/sign_up"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/SignInBTN"
        app:layout_constraintEnd_toEndOf="@id/SignInBTN"
        app:layout_constraintStart_toStartOf="@id/SignInBTN"
        />

</androidx.constraintlayout.widget.ConstraintLayout>