<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateBoardActivity">


    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/createBoardToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/createBoardToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/create_board"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:background="@android:color/transparent"
            android:elevation="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@id/createBoardToolBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_margin="@dimen/dp15">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp15">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/boardImage"
                android:layout_width="@dimen/nav_image_size"
                android:layout_height="@dimen/nav_image_size"
                android:layout_marginTop="@dimen/margin_top_profile"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                app:civ_border_color="@color/white"
                android:layout_gravity="center"
                app:civ_border_width="@dimen/image_border_width"
                android:contentDescription="@string/user_profile_photo_imageview"
                android:src="@drawable/ic_user_place_holder"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/boardNameETLayout"
                android:layout_margin="@dimen/dp15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:errorEnabled="true"
                android:hint="@string/boardname">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/boardNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createBoardBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp15"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/create_board"
                style="?attr/materialButtonOutlinedStyle"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>